# rust-dpdk

./: Cargo.toml  Makefile  README.md  rte.h
src/: dpdk.rs  lib.rs
